# TOTAL

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  translations.qrc
imgs/ICON/: icon.icns
src/: bootloader.cpp  bootloader.h  extractor.cpp  extractor.h  fileManager.cpp  fileManager.h  phone.cpp  phone.h  translations.cpp
src/updMetadata/: update_metadata.pb.cc  update_metadata.pb.h  update_metadata.proto
translations/: Total_ru_RU.ts  Totale_de_DE.ts  Totale_el_GR.ts  Totale_en_US.ts  Totale_es_ES.ts  Totale_fr_FR.ts  Totale_it_IT.ts  Totale_ja_JP.ts  Totale_lt_LT.ts  Totale_pl_PL.ts  Totale_pt_PT.ts  Totale_ru_RU.ts  Totale_tr_TR.ts  Totale_uk_UA.ts
